--- a/app/src/main/res/layout/c_fragment.xml
+++ b/app/src/main/res/layout/c_fragment.xml
@@ -7,9 +7,15 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/right_text"
+        android:id="@+id/c_fragment_text"
         android:layout_gravity="center_horizontal"
         android:text="this is Fragment"
         android:textSize="10sp" />
+
+    <Button
+        android:id="@+id/c_fragment_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="点我变字" />
 
 </LinearLayout>
