--- a/app/src/main/res/layout/layout_fragment.xml
+++ b/app/src/main/res/layout/layout_fragment.xml
@@ -5,14 +5,14 @@
 
     <fragment
         android:id="@+id/left_fragment"
-        android:name="fragment.LeftFragment"
+        android:name="fragment.AFragment"
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_weight="1" />
 
     <fragment
         android:id="@+id/right_fragment"
-        android:name="fragment.RightFragment"
+        android:name="fragment.BFragment"
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_weight="1" />
