--- a/app/src/main/res/layout/activity_dynamic_fragment.xml
+++ b/app/src/main/res/layout/activity_dynamic_fragment.xml
@@ -38,4 +38,12 @@
         android:layout_marginTop="70dp"
         android:text="fragment3" />
 
+
+    <Button
+        android:id="@+id/send_message_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="点我发信息" />
+
 </RelativeLayout>
