--- a/app/src/main/res/layout/activity_dynamic_fragment.xml
+++ b/app/src/main/res/layout/activity_dynamic_fragment.xml
@@ -1,49 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/show_fragment_layout"
         android:layout_width="match_parent"
+        android:layout_gravity="center_horizontal"
         android:layout_height="400dp"
         android:background="#00FF00" />
 
 
     <Button
         android:id="@+id/show_fragment1"
+        android:layout_gravity="center_horizontal"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/show_fragment_layout"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="fragment1" />
 
     <Button
         android:id="@+id/show_fragment2"
         android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
+
         android:layout_height="wrap_content"
-        android:layout_below="@+id/show_fragment_layout"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
         android:text="fragment2" />
 
     <Button
         android:id="@+id/show_fragment3"
         android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
+
         android:layout_height="wrap_content"
-        android:layout_below="@+id/show_fragment_layout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="10dp"
         android:text="fragment3" />
 
 
     <Button
         android:id="@+id/send_message_button"
+        android:layout_gravity="center_horizontal"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="点我发信息" />
+        android:layout_marginTop="10dp"
+        android:text="点我发初始化的信息" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/send_dynamic_message_button"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
+
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="点我发时时的信息" />
+
+</LinearLayout>
