整理信息传递功能

--- a/app/src/main/res/layout/send_msg_to_activity_layout.xml
+++ b/app/src/main/res/layout/send_msg_to_activity_layout.xml
@@ -4,14 +4,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <TextView
-        android:id="@+id/right_text"
+        android:id="@+id/send_msg_to_activity_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_margin="50dp"
+        android:textSize="40sp"
         android:layout_gravity="center_horizontal"
-        android:text="this is Fragment"
-        android:textSize="20sp" />
+        android:text="接收消息" />
 
+    <LinearLayout
+        android:id="@+id/show_send_msg_layout"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:background="#00ff00"
+        android:orientation="vertical" />
 
 </LinearLayout>
